# mcptool

./: .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  Dependencias.bat  How-to-install.txt  Installer.bat  InvalidProtocols.json  LICENSE  MCPTool.bat  MCPTool.py  README.md  bot.py  bruteforce_settings.json  dev-requirements.txt  dist.bat  dist.py  install.bat  install.cmd  install.ps1  install.sh  install_deps.py  install_modules.bat  install_modules.ps1  main.py  mcserver-scrapper.json  msi.py  package.json  pyproject.toml  requirements.txt  run.bat  run.ps1  run.sh  sendcmd_settings.json  settings.json  setup.py  test.py  windows-install.bat
bungee/: config.txt  config.yml  proxy.log.0  proxy.log.0.1  start.bat
config/: bruteforce_config.json  config.json  sendcmd_config.json
config/bungee/: config.yml  iniciar.bat
config/files/: RBot.py  checks_mcptool.py  config_bungee.txt  config_motd.txt  config_poisoning.txt  connect.py  connect.txt  mc_replace_text.py  names.txt  questions.py  server.properties_linux  server.properties_windows
config/lang/: cat.json  de.json  en.json  es.json  fr.json  hu.json  pt.json  sk.json  tr.json
config/phishing/: consola.py  datos.txt  eula.txt  iniciar.bat  ip_phishing.txt  server.properties  servers.txt  spigot.yml  usercache.json
config/poisoning/: config.yml  iniciar.sh
config/subdomains/: test.txt
config/subdominios/: mcptool.txt
docs/: commands.md  instalation.MD
docs/en/: api.MD  commands.MD  faq.MD  instalation.MD
docs/es/: api.MD  commands.MD  faq.MD  instalation.MD
files/: bot.txt  test.txt
files/commands/: fawe_ip.txt  griefing1.txt  hd_directory.txt  litebans.txt  papi_ip.txt  serversigns.txt
languages/: den.json  en.json  es.json  it.json  ru.json  tr.json
mccolor/: __init__.py  mc.py
mcstatus_mcpt/: __init__.py  __main__.py  address.py  bedrock_status.py  pinger.py  querier.py  server.py  status_response.py
minecraft/: BotMessages.py  CheckVersion.py  ServerData.py  ShowServer.py  UpdateVersions.py  Versions.json
otherfiles/: cleanmotd_settings
passwords/: test.txt
phishing/: a.txt
presence/: RichPresence.command
scans/: ip.127.0.0.1.txt
scripts/: bot.mjs  brute_auth.mjs  connect.mjs  sendcmd.mjs  server_response.mjs  utilities.mjs
settings/: bruteforce.json  config.json  settings.json
src/: exe.py  main.py  startup.py  updater.py  updater_exe.py
src/api/: api.py  (+2 more)
tests/: validate_methods_tests.py
tutorial/: commands.md  how_to_install.md
txt/: fakeproxy.config  forwarding.secret
(+645 files in other folders)
