[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcptool"
version = "0.1.1"
readme = "README.md"
requires-python = ">=3.6"
authors = [
  {name = "Pedro Agustin Vega (wrrulos)", email = "vegapedroagustin2004@gmail.com"}
]
dependencies = [
    "mccolors",
    "mcstatus",
    "mcrcon",
    "requests",
    "loguru",
    "pypresence"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]


[project.scripts]
mcptool = "mcptool.__main__:main"
